Fixed executable name

--- a/tenelles.personal.sdPlugin/manifest.json
+++ b/tenelles.personal.sdPlugin/manifest.json
@@ -21,9 +21,9 @@
     "Author": "Tenelles",
     "Category": "Personal",
     "CategoryIcon": "images/icons/pluginIcon",
-    "CodePath": "streamdockPluginExample.exe",
-    "CodePathMac": "streamdockPluginExample",
-    "CodePathWin": "streamdockPluginExample.exe",
+    "CodePath": "tenellesPersonalPlugin.exe",
+    "CodePathMac": "tenellesPersonalPlugin",
+    "CodePathWin": "tenellesPersonalPlugin.exe",
     "Description": "Personal Plugin",
     "Name": "State Display",
     "Icon": "images/icons/pluginIcon",
